# game-of-life-ND-shadow

./: .gitignore  README.md  main.py  pyproject.toml
.claude/: CLAUDE.md
backend/: config.py  engine.py  projection.py  rules.py  state.py
docs/: SPEC.md
frontend/: app.py  colormap.py  controls.py  hud.py  renderer.py  shadow_cast.py
life_shadow.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
presets/: gen5561_B5_S567.npz
tests/: test_engine.py
