[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "life-shadow"
version = "0.1.0"
description = "N-dimensional Game of Life visualized through (N-1)-dimensional shadow projection"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pygame>=2.5",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]
volume = [
    "pyvista>=0.42",
]

[project.scripts]
life-shadow = "main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["backend*", "frontend*"]
